--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A language for querying datasets using key-value pairs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "author": "Keith Horwood <keithwhor@gmail.com>",
   "license": "MIT"
