--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "node test.js"
   },
   "author": "Keith Horwood <keithwhor@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "mocha": "^6.1.4"
+  }
 }
